# datasink

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  README.md  build.rs  create_notes_history.sql  demo_cli.sh  http-proxy-server.js  run_demo.sh  sync_note_tables.sql  test_multidb.sh
docs/: PostIt-Client-Guide.md
examples/: client.rs  postit-web-client.html  postit_demo.sh
proto/: admin.proto  common.proto  crud.proto  datasink.proto
schemas/: PostIt.schema  PostIt_queries.sql  blog.schema  default.schema  example.schema
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  validation.rs
src/db/: error.rs  manager.rs  mod.rs  sqlite.rs  traits.rs
src/grpc/: conversions.rs  mod.rs  service.rs
src/schema/: mod.rs  parser.rs
tests/: integration_test.rs
