[package]
name = "datasink"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC dependencies
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
async-stream = "0.3"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Encoding
base64 = "0.21"

# Date/Time
chrono = "0.4"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
chrono = "0.4"
tonic = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[[example]]
name = "client"
path = "examples/client.rs"
